# plai

./: .gitignore  CMakeLists.txt  README.md  nvs.csv  partitions.csv  regen-protos.bat  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  common_define.h  idf_component.yml  main.cpp
main/apps/: apps.h
main/apps/app_channels/: app_channels.cpp  app_channels.h
main/apps/app_graphs/: app_graphs.cpp  app_graphs.h  line_graph.cpp  line_graph.h
main/apps/app_monitor/: app_monitor.cpp  app_monitor.h
main/apps/app_nodes/: app_nodes.cpp  app_nodes.h
main/apps/app_settings/: app_settings.cpp  app_settings.h
main/apps/app_stats/: app_stats.cpp  app_stats.h
main/apps/launcher/: launcher.cpp  launcher.h
main/hal/: board.h  hal.h  hal_cardputer.cpp  hal_cardputer.h  hal_config.h
main/hal/bat/: battery.cpp  battery.h
main/hal/ble/: README.md  ble_peripheral.cpp  ble_peripheral.h
main/hal/button/: button.cpp  button.h
main/hal/display/: Bus_IDFSPI.cpp  Bus_IDFSPI.hpp  Panel_ST7789V2.cpp  Panel_ST7789V2.hpp  display.hpp
main/hal/gps/: gps.cpp  gps.h
main/hal/i2c/: i2c_master.cpp  i2c_master.h
main/hal/keyboard/: keyboard.cpp  keyboard.h  keyboard_reader.h  keyboard_reader_iomatrix.cpp  keyboard_reader_iomatrix.h  keyboard_reader_tca8418.cpp  keyboard_reader_tca8418.h  tca8418_driver.cpp  tca8418_driver.h
main/hal/led/: led.cpp  led.h
main/hal/radio/: sx1262.cpp  (+2 more)
main/mesh/: mesh_data.cpp  mesh_data.h  mesh_service.cpp  mesh_service.h  node_db.cpp  node_db.h  packet_router.cpp  packet_router.h
main/settings/: settings.cpp  settings.h
(+90 files in other folders)
